[package]
name = "rustpulse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
fern = "0.6.2"
inputbot = "0.6.0"
log = "0.4.20"
once_cell = "1.19.0"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
